fix left container being too tall on narrow view

--- a/css/style.css
+++ b/css/style.css
@@ -52,8 +52,11 @@ body {
 
 #left-container, #right-container {
     min-width: var(--canvas-width);
-    min-height: var(--canvas-height);
     justify-content: space-between;
+}
+
+#right-container {
+    min-height: var(--canvas-height);
 }
 
 .is-margin-half-rem-x {
